# pegasus_external

./: README.md
casadi_vendor/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
dji_vendor/: CMakeLists.txt  package.xml
eigen_vendor/: CMakeLists.txt  package.xml
mavsdk_vendor/: CMakeLists.txt  package.xml
micro_xrce_vendor/: CMakeLists.txt  package.xml
opencv_vendor/: CMakeLists.txt  package.xml
sophus_vendor/: CMakeLists.txt  package.xml
vrpn_vendor/: CMakeLists.txt  package.xml
