<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>casadi_vendor</name>
  <version>3.5.1</version>
  <description>Wrapper around CasADi to make it available to the ROS ecosystem.</description>
  <maintainer email="josh.whitley@autoware.org">Josh Whitley</maintainer>
  <license>Apache License 2.0</license> <!-- This package is Apache 2.0 -->
  <license>LGPL</license> <!-- CasADi is LGPL 3.0 -->

  <url type="bugtracker">https://github.com/casadi/casadi/issues</url>
  <url type="repository">https://github.com/casadi/casadi</url>
  <url type="website">http://casadi.org/</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>coinor-libipopt-dev</depend>
  <depend>gfortran</depend>
  <depend>git</depend>
  <depend>liblapack-dev</depend>
  <depend>pkg-config</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
