<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dji_vendor</name>
  <version>3.9.0</version>
  <description>ROS vendor package for the dji api</description>
  <maintainer email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Jacinto</maintainer>
  <license>MIT</license> <!-- DJIs License-->

  <url type="bugtracker">https://github.com/dji-sdk/Onboard-SDK/issues</url>
  <url type="repository">https://github.com/dji-sdk/Onboard-SDK</url>
  <url type="website">https://developer.dji.com/onboard-sdk/documentation/introduction/homepage.html</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
