<?xml version="1.0"?>
<package format="3">
  <name>eigen_vendor</name>
  <version>3.4.0</version>
  <description>Wrapper around Eigen to make it available to the ROS ecosystem.</description>
  <maintainer email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Jacinto</maintainer>
  <license>BSD 3-Clause</license>

  <url type="bugtracker">https://gitlab.com/libeigen/eigen/-/issues</url>
  <url type="repository">https://gitlab.com/libeigen/eigen</url>
  <url type="website">http://eigen.tuxfamily.org/</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
