<?xml version="1.0"?>
<package format="3">
  <name>opencv_vendor</name>
  <version>4.7.0</version>
  <description>Wrapper around OpenCV 4.7.0 to make it available to the ROS ecosystem.</description>
  <maintainer email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Jacinto</maintainer>
  <license>BSD 3-Clause</license>

  <url type="bugtracker">https://github.com/opencv/opencv/issues</url>
  <url type="repository">https://github.com/opencv/opencv/</url>
  <url type="website">https://opencv.org/</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
